Page reloads every second for an accurate count

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 " minutes et " + secondsElapsed + " secondes."
     document.getElementById('mainText').innerHTML = Daniel
 
+    var intervalId = window.setInterval(function(){
+      location.reload()
+ }, 1000);
 
   </script>
 </body>
